# Llamafolio

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  instructions.asciidoc  pyproject.toml
.streamlit/: config.toml
assets/: architecture-horizon.excalidraw  architecture.excalidraw
docs/: README.md  architecture.md  rapport.typ  rapport_extended.typ  slides.typ  theme.typ
docs/slides/: 00-titre.typ  01-cas-usage.typ  02-architecture.typ  03-demo.typ  04-analyse-critique.typ  05-conclusion.typ
scripts/: check_alpaca.py  check_mcp.py  check_tools.py  run_eval.py  run_multi_agent.py  run_single_agent.py  seed_portfolio.py
src/llamafolio/: __init__.py  config.py  graph.py
src/llamafolio/agents/: __init__.py  graph.py  router.py  single_agent.py
src/llamafolio/data/: __init__.py  portfolio.py
src/llamafolio/prompts/: analyst.md  executor.md  intent_router.md  research.md  risk.md  single_agent.md  supervisor.md
src/llamafolio/tools/: __init__.py  alpaca_mcp.py  tavily_search.py  yfinance_tools.py
src/llamafolio/ui/: __init__.py  assets.py  charts.py  chat.py  empty_state.py  header.py  main.py  messages.py  portfolio_data.py  sidebar.py  styles.py  trade_detector.py
tests/: eval_dataset.json  eval_report.before_patch.md  eval_results.before_patch.json
