[project]
name = "llamafolio"
version = "0.1.0"
description = "Multi-agent LLM portfolio advisor with paper trading via Alpaca MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM + agentic
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-supervisor>=0.0.20",
    "langchain-mcp-adapters>=0.1.0",
    # Tools
    "alpaca-py>=0.30.0",
    "tavily-python>=0.5.0",
    "yfinance>=0.2.40",
    # UI
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llamafolio"]

[tool.ruff]
line-length = 100
target-version = "py311"
